# atom

./: .editorconfig  .gitignore  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel  README.md
atom/common/: CMakeLists.txt
atom/common/include/atom/: arena.hpp  arguments.hpp  bit.hpp  const_char_array.hpp  integer.hpp  literal.hpp  meta.hpp  panic.hpp  punning.hpp  result.hpp  vector_n.hpp
atom/common/src/: panic.cpp
atom/core/: CMakeLists.txt
atom/logger/: CMakeLists.txt
atom/logger/include/atom/logger/: logger.hpp
atom/logger/include/atom/logger/sink/: file.hpp
atom/logger/src/: logger.cpp
atom/math/: CMakeLists.txt
atom/math/include/atom/math/: box3.hpp  plane.hpp  traits.hpp  vector.hpp
common/include/atom/: arena.hh  arena.hpp  arguments.hh  arguments.hpp  bit.hh  const_char_array.hh  float.hpp  hash.hh  integer.hpp  non_copyable.hh  non_moveable.hh  panic.hpp  punning.hh  punning.hpp  result.hh  vector_n.hh
common/include/atom/detail/: parse_utils.hh
common/src/: panic.cc  panic.cpp
logger/include/atom/logger/: logger.hh
logger/include/atom/logger/sink/: console.hh  console.hpp  file.hh
logger/src/: logger.cc  logger.cpp
logger/src/sink/: console.cc  console.cpp  file.cc  file.cpp
math/include/atom/math/: box3.hh  frustum.hh  frustum.hpp  matrix4.hh  matrix4.hpp  plane.hh  quaternion.hh  quaternion.hpp  vector.hh  vector.hpp
